k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-deployment
  template:
    metadata:
      labels:
        app: ping-deployment
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Always
          resources:
            requests:
              memory: 10Mi
              cpu: "5m"
            limits:
              memory: 100Mi
              cpu: "50m"
          ports:
            - containerPort: 80
