k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  selector:
    app: ping-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
