k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts: 
      - subdomain.domain.com.br
      secretName: subdomain.domain.com.br-tls
  rules:
  - host: "subdomain.domain.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ping-service
            port:
              number: 80
